--- a/26-react-router/src/App.css
+++ b/26-react-router/src/App.css
@@ -14,3 +14,20 @@ h1 {
   font-size: 90px;
   margin-top: 20px;
 }
+
+nav a {
+  font-size: 20px;
+  margin: 10px;
+  color: #000;
+}
+
+nav {
+  padding: 10px;
+  background-color: rgb(69, 49, 18);
+  width: 100%;
+}
+
+.active {
+  color: #fff;
+  text-decoration: none;
+}
